--- a/Template Dynamic Array/Template Dynamic Array.vcxproj.filters
+++ b/Template Dynamic Array/Template Dynamic Array.vcxproj.filters
@@ -5,30 +5,36 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
+    <Filter Include="DynamicArray">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="Ordered Dynamic Array">
+      <UniqueIdentifier>{a6c86f91-390b-4b46-b72f-e3161c71165c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Dynamic Stack">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynamicArray.h">
-      <Filter>Header Files</Filter>
+      <Filter>DynamicArray</Filter>
     </ClInclude>
     <ClInclude Include="DynamicArrayImpl.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>DynamicArray</Filter>
     </ClInclude>
     <ClInclude Include="OrderedDynamicArray.h">
-      <Filter>Header Files</Filter>
+      <Filter>Ordered Dynamic Array</Filter>
     </ClInclude>
     <ClInclude Include="OrderedDynamicArrayImpl.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Ordered Dynamic Array</Filter>
     </ClInclude>
-    <ClInclude Include="Stack.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="DynamicStackImpl.hpp">
+      <Filter>Dynamic Stack</Filter>
+    </ClInclude>
+    <ClInclude Include="DynamicStack.h">
+      <Filter>Dynamic Stack</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
