Adding the StaticQueue class

--- a/Template Dynamic Array/Template Dynamic Array.vcxproj
+++ b/Template Dynamic Array/Template Dynamic Array.vcxproj
@@ -148,10 +148,12 @@
   <ItemGroup>
     <ClInclude Include="DynamicArray.h" />
     <ClInclude Include="DynamicArrayImpl.hpp" />
+    <ClInclude Include="StaticQueue.h" />
     <ClInclude Include="DynamicStackImpl.hpp" />
     <ClInclude Include="OrderedDynamicArray.h" />
     <ClInclude Include="OrderedDynamicArrayImpl.hpp" />
     <ClInclude Include="DynamicStack.h" />
+    <ClInclude Include="StaticQueueImpl.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
