--- a/Linked List/Linked List.vcxproj.filters
+++ b/Linked List/Linked List.vcxproj.filters
@@ -21,16 +21,16 @@
     <ClInclude Include="NodeImpl.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="S_LinkedList.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="S_Iterator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="LinkedList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LinkedListImpl.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ListIterator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ListIteratorImpl.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
