--- a/Linked List/Linked List.vcxproj.filters
+++ b/Linked List/Linked List.vcxproj.filters
@@ -5,33 +5,39 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files">
+    <Filter Include="Linked List">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
+    <Filter Include="Linked-List-Stack">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.h">
-      <Filter>Header Files</Filter>
+      <Filter>Linked List</Filter>
     </ClInclude>
     <ClInclude Include="NodeImpl.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Linked List</Filter>
     </ClInclude>
     <ClInclude Include="LinkedList.h">
-      <Filter>Header Files</Filter>
+      <Filter>Linked List</Filter>
     </ClInclude>
     <ClInclude Include="LinkedListImpl.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Linked List</Filter>
     </ClInclude>
     <ClInclude Include="ListIterator.h">
-      <Filter>Header Files</Filter>
+      <Filter>Linked List</Filter>
     </ClInclude>
     <ClInclude Include="ListIteratorImpl.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Linked List</Filter>
+    </ClInclude>
+    <ClInclude Include="LStack.h">
+      <Filter>Linked-List-Stack</Filter>
+    </ClInclude>
+    <ClInclude Include="LStackImpl.hpp">
+      <Filter>Linked-List-Stack</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
