--- a/Template Dynamic Array/Template Dynamic Array.vcxproj.filters
+++ b/Template Dynamic Array/Template Dynamic Array.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="StaticStackImpl.hpp">
       <Filter>Static Stack</Filter>
     </ClInclude>
+    <ClInclude Include="MergeSort.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
