Adding Insertion and Bubble sort

--- a/Template Dynamic Array/Template Dynamic Array.vcxproj.filters
+++ b/Template Dynamic Array/Template Dynamic Array.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClInclude Include="MergeSort.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="InsertionSort.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BubbleSort.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
