--- a/Template Dynamic Array/Template Dynamic Array.vcxproj.filters
+++ b/Template Dynamic Array/Template Dynamic Array.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="BubbleSort.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="SelectionSort.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
