--- a/Template Dynamic Array/Sortings/Sortings.vcxproj.filters
+++ b/Template Dynamic Array/Sortings/Sortings.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\..\Sortings\QuickSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Sortings\ShellSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Sortings\main.cpp">
