--- a/Template Dynamic Array/Sortings/Sortings.vcxproj.filters
+++ b/Template Dynamic Array/Sortings/Sortings.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\..\Sortings\ShellSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Sortings\SelectionMethod.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Sortings\main.cpp">
