--- a/Template Dynamic Array/Sortings/Sortings.vcxproj.filters
+++ b/Template Dynamic Array/Sortings/Sortings.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="..\..\Sortings\CountingSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LLMergeSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Sortings\main.cpp">
