--- a/Template Dynamic Array/Sortings/Sortings.vcxproj.filters
+++ b/Template Dynamic Array/Sortings/Sortings.vcxproj.filters
@@ -45,10 +45,13 @@
     <ClInclude Include="LLMergeSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Sortings\HeapSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Sortings\main.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
