Starting the implementation of BSTree

--- a/Binary-search trees/Binary-search trees.vcxproj.filters
+++ b/Binary-search trees/Binary-search trees.vcxproj.filters
@@ -28,5 +28,8 @@
     <ClCompile Include="main.cpp">
       <Filter>General</Filter>
     </ClCompile>
+    <ClCompile Include="BSTree.cpp">
+      <Filter>BSTree</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
