--- a/Binary-search trees/Binary-search trees.vcxproj
+++ b/Binary-search trees/Binary-search trees.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="BSTreeNodeImpl.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BSTree.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
