--- a/Binary-search trees/Binary-search trees.vcxproj
+++ b/Binary-search trees/Binary-search trees.vcxproj
@@ -154,6 +154,11 @@
     <ClCompile Include="BSTree.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Template Dynamic Array\Template Dynamic Array.vcxproj">
+      <Project>{a751a4b4-193e-4f73-91ac-05b1ff909c4d}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
