--- a/Heap and Priority queues/Heap and Priority queues.vcxproj
+++ b/Heap and Priority queues/Heap and Priority queues.vcxproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryHeap.h" />
+    <ClInclude Include="BinaryHeapImpl.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Template Dynamic Array\Template Dynamic Array.vcxproj">
