--- a/Heap and Priority queues/Heap and Priority queues.vcxproj.filters
+++ b/Heap and Priority queues/Heap and Priority queues.vcxproj.filters
@@ -19,5 +19,8 @@
     <ClInclude Include="BinaryHeap.h">
       <Filter>Binary Heap</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryHeapImpl.hpp">
+      <Filter>Binary Heap</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
