Changing the Hash base interface

--- a/Hashing/Hashing.vcxproj.filters
+++ b/Hashing/Hashing.vcxproj.filters
@@ -5,13 +5,19 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Hashing functors">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Hash structures">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="Hashing functions">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
+    </Filter>
+    <Filter Include="Hash structures\Base">
+      <UniqueIdentifier>{1977269e-7c30-4cc5-881e-0bb66486ffea}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Hash structures\Separate chaining">
+      <UniqueIdentifier>{ba8e13ed-74c0-47aa-8863-f09c6e97aaed}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -21,25 +27,25 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HashFunction.h">
-      <Filter>Hashing functors</Filter>
+      <Filter>Hashing functions</Filter>
     </ClInclude>
     <ClInclude Include="ModAndMultiHashFunction.h">
-      <Filter>Hashing functors</Filter>
+      <Filter>Hashing functions</Filter>
     </ClInclude>
     <ClInclude Include="ModuloHashFunction.h">
-      <Filter>Hashing functors</Filter>
-    </ClInclude>
-    <ClInclude Include="Hash.h">
-      <Filter>Hash structures</Filter>
+      <Filter>Hashing functions</Filter>
     </ClInclude>
     <ClInclude Include="ModuloHashFunctionImpl.hpp">
-      <Filter>Hashing functors</Filter>
+      <Filter>Hashing functions</Filter>
     </ClInclude>
     <ClInclude Include="ModAndMultiHashFunctionImpl.hpp">
-      <Filter>Hashing functors</Filter>
+      <Filter>Hashing functions</Filter>
+    </ClInclude>
+    <ClInclude Include="Hash.h">
+      <Filter>Hash structures\Base</Filter>
     </ClInclude>
     <ClInclude Include="HashImpl.hpp">
-      <Filter>Hash structures</Filter>
+      <Filter>Hash structures\Base</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
