Adding a simple Linear probing Hash

--- a/Hashing/Hashing.vcxproj
+++ b/Hashing/Hashing.vcxproj
@@ -146,10 +146,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HashFunction.h" />
+    <ClInclude Include="HashFunctionImpl.hpp" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="LPMap.h" />
+    <ClInclude Include="LPMapImpl.hpp" />
     <ClInclude Include="ModAndMultiHashFunction.h" />
     <ClInclude Include="ModAndMultiHashFunctionImpl.hpp" />
     <ClInclude Include="ModuloHashFunction.h" />
