Bug fixes on SCMap

--- a/Hashing/Hashing.vcxproj
+++ b/Hashing/Hashing.vcxproj
@@ -146,10 +146,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Book.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Book.h" />
     <ClInclude Include="HashFunction.h" />
     <ClInclude Include="HashFunctionImpl.hpp" />
     <ClInclude Include="Item.h" />
