Adding unit tests for uniquePtr

--- a/Reusable classes/Unique pointer/Unique pointer/Unique pointer.vcxproj
+++ b/Reusable classes/Unique pointer/Unique pointer/Unique pointer.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Shapes.h" />
     <ClInclude Include="uniquePtr.h" />
     <ClInclude Include="uniquePtrImpl.hpp" />
   </ItemGroup>
