--- a/Reusable classes/String/String/String.vcxproj.filters
+++ b/Reusable classes/String/String/String.vcxproj.filters
@@ -14,10 +14,10 @@
     <ClCompile Include="String.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StringHelpFunctions.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="cStringGlobals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -25,7 +25,7 @@
     <ClInclude Include="String.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="StringHelpFunctions.h">
+    <ClInclude Include="cStringGlobals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
