--- a/Dynamic Array with move semantics/Dynamic Array with move semantics/Dynamic Array with move semantics.vcxproj
+++ b/Dynamic Array with move semantics/Dynamic Array with move semantics/Dynamic Array with move semantics.vcxproj
@@ -149,6 +149,9 @@
     <ClInclude Include="DArray.h" />
     <ClInclude Include="DArrayImpl.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
