Renaming the ForwardList class and its Iterator
Renamed the ForwardList to SinglyLinkedList.
Renamed the ForwardListIterator to SinglyLinkedListIterator.

--- a/Forward List/Forward List test/Forward List test.vcxproj.filters
+++ b/Forward List/Forward List test/Forward List test.vcxproj.filters
@@ -10,7 +10,7 @@
     <ClCompile Include="IteratorTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ForwardListTest.cpp">
+    <ClCompile Include="SinglyLinkedListTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
