--- a/Forward List/Forward List test/Forward List test.vcxproj
+++ b/Forward List/Forward List test/Forward List test.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ForwardListTest.cpp" />
+    <ClCompile Include="SinglyLinkedListTest.cpp" />
     <ClCompile Include="IteratorTest.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -32,6 +32,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>ForwardListtest</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>Singly-Linked List Test</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
