--- a/Forward List/Forward List/Forward List.vcxproj
+++ b/Forward List/Forward List/Forward List.vcxproj
@@ -23,6 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>ForwardList</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>Singly-Linked List</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -146,10 +147,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="ForwardList.h" />
-    <ClInclude Include="ForwardListImpl.hpp" />
-    <ClInclude Include="ForwardListIterator.h" />
-    <ClInclude Include="ForwardListIteratorImpl.hpp" />
+    <ClInclude Include="SinglyLinkedList.h" />
+    <ClInclude Include="SinglyLinkedListImpl.hpp" />
+    <ClInclude Include="SinglyLinkedListIterator.h" />
+    <ClInclude Include="SinglyLinkedListIteratorImpl.hpp" />
     <ClInclude Include="Node.h" />
   </ItemGroup>
   <ItemGroup>
